syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/slamchillz/xchange/pb";

message Customer {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  bool is_active = 6;
  bool is_staff = 7;
  bool is_supercustomer = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}
